--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite React App</title>
+    <title>Vite Rescript React App</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/Main.bs.js"></script>
   </body>
 </html>
+<!-- By Yoennis Rodriguez -->
